--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.46.0",
     "aws-cdk-lib": "2.1.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
